<resources>
    <string name="app_name">InglésPlus</string>
    <string name="recap">Recap</string>
    <string name="review">Review</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="phrasal_verbs">Phrasal Verbs</string>
    <string name="verb_tenses">Verb Tenses</string>
    <string name="collocations">Collocations</string>
    <string name="adjectives">Adjectives</string>
    <string name="hobbies">Hobbies</string>
    <string name="countries">Countries</string>
    <string name="health_amp_food"><![CDATA[Health & Food]]></string>
    <string name="name">Name</string>
    <string name="meaning">Meaning</string>
    <string name="example">Example</string>
    <string name="translation">Translation</string>
    <string name="verbos">Verbos</string>
    <string name="hint">Busque un verbo...</string>
    <string name="label_search">Busqueda</string>
    <string name="adjective">Adjective</string>
    <string name="hobby">Hobby</string>
    <string name="sentences">Sentences</string>
    <string name="health">Health</string>
    <string name="word">Word</string>
    <string name="type">Type</string>
    <string name="how_different_foods_are_prepared">How different foods are prepared</string>
    <string name="hangman">Hangman</string>
    <string name="you_won">You won!</string>
    <string name="you_lost">You lost!</string>
    <string name="lettersAlreadyUsed">Letters already used: %1$s</string>
    <string name="enter_the_letter">Enter the letter :</string>
    <string name="quiz">Quiz</string>
    <string name="next">Next</string>
    <string name="results">Results: %1$d/%2$d. %3$s</string>
    <string name="passed">You passed!</string>
    <string name="no_passed">You did not pass.</string>
    <string name="frequency_adverbs">Frequency adverbs</string>
    <string name="time_adverbs">Time adverbs</string>
    <string name="adverb">Adverb</string>
</resources>