<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:contentDescription="@string/health"
    android:padding="20dp"
    tools:context=".activities.HealthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp">

            <TableRow
                android:id="@+id/default_row"
                android:layout_width="fill_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:focusable="true">

                <TextView
                    android:id="@+id/word"
                    android:layout_width="120dp"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:background="@drawable/row_border"
                    android:maxLines="1"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp"
                    android:text="@string/word"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/type"
                    android:layout_width="100dp"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:background="@drawable/row_border"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp"
                    android:text="@string/type"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/meaning"
                    android:layout_width="wrap_content"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:background="@drawable/row_border"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp"
                    android:text="Meaning"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/example"
                    android:layout_width="wrap_content"
                    android:layout_column="3"
                    android:layout_weight="1"
                    android:background="@drawable/row_border"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp"
                    android:text="@string/example"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/tableLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:id="@+id/default_row2"
                android:layout_width="fill_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:focusable="true">

                <TextView
                    android:id="@+id/method"
                    android:layout_width="wrap_content"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:background="@drawable/row_border"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp"
                    android:text="@string/how_different_foods_are_prepared"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/meaning2"
                    android:layout_width="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:background="@drawable/row_border"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp"
                    android:text="@string/meaning"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>

    </LinearLayout>
</ScrollView>