<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:contentDescription="@string/collocations"
    android:padding="20dp"
    tools:context=".activities.CollocationsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:id="@+id/default_row"
                android:layout_width="fill_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:focusable="true">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:background="@drawable/row_border"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/meaning"
                    android:layout_width="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="1"
                    android:background="@drawable/row_border"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp"
                    android:text="@string/meaning"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>