<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".RecapActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_vocabulary"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/red"
            android:paddingLeft="50dp"
            android:paddingTop="50dp"
            android:paddingRight="50dp"
            android:paddingBottom="50dp"
            android:text="@string/vocabulary"
            android:textSize="30sp"
            app:cornerRadius="20dp"
            app:strokeColor="@color/white"
            app:strokeWidth="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_phrasal"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/blue"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingLeft="50dp"
            android:paddingTop="50dp"
            android:paddingRight="50dp"
            android:paddingBottom="50dp"
            android:text="@string/phrasal_verbs"
            android:textSize="30sp"
            app:cornerRadius="20dp"
            app:strokeColor="@color/white"
            app:strokeWidth="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_tenses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/yellow"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingLeft="50dp"
            android:paddingTop="50dp"
            android:paddingRight="50dp"
            android:paddingBottom="50dp"
            android:text="@string/verb_tenses"
            android:textSize="30sp"
            app:cornerRadius="20dp"
            app:strokeColor="@color/white"
            app:strokeWidth="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_collocations"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingLeft="50dp"
            android:paddingTop="50dp"
            android:paddingRight="50dp"
            android:paddingBottom="50dp"
            android:text="@string/collocations"
            android:textSize="30sp"
            app:cornerRadius="20dp"
            app:strokeColor="@color/white"
            app:strokeWidth="15dp" />

    </LinearLayout>
</LinearLayout>